# infapi

./: .appveyor.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md
assets/docker/: infapi.cmd
examples/curl/: run.cmd
examples/curl/requests/: checkSendLogAvailable.json  getResourceInfo.json  getServerClock.json  getServerState.json  getServices.json
examples/curl/responses/: getServerClock.json
examples/inf2aria/: Dockerfile  README.md  docker-compose.yml  eacnet.py  inf2aria.py  infapi.py  requirements.txt
lib/: avs2-core.def  avs2-core.lib
src/: infapi.cpp  launcher.cpp  server.cpp  server.hpp
src/imports/: avs2.cpp  avs2.hpp  eacnet.cpp  eacnet.hpp
src/methods/: decodeResponse.cpp  decodeResponse.hpp  encodeRequest.cpp  encodeRequest.hpp  setEacnetClock.cpp  setEacnetClock.hpp
